# Vaultlet

./: README.md  post_install.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
vaultlet/: __init__.py  __main__.py  core.py  post_install.py  pyproject.toml  setup.py
